src/ui/snapshots/state/shared/error/error_with_long_message.snap
---
source: src/ui/state/shared/error.rs
expression: harness.backend()
---
"                                                                                "
"                                                                                "
"                                ❌ Error Occurred                               " Hidden by multi-width symbols: [(33, " ")]
"                                                                                "
"                                                                                "
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │An unexpected error occurred while processing your request. The Azure     │  "
"  │DevOps API returned a 401 Unauthorized error, which typically indicates   │  "
"  │that the Personal Access Token (PAT) is invalid, expired, or does not have│  "
"  │sufficient permissions to access the requested resource. Please verify    │  "
"  │your credentials and try again.                                           │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                Press 'q' to exit                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
