src/ui/snapshots/state/shared/error/error_with_message.snap
---
source: src/ui/state/shared/error.rs
expression: harness.backend()
---
"                                                                                "
"                                                                                "
"                                ❌ Error Occurred                               " Hidden by multi-width symbols: [(33, " ")]
"                                                                                "
"                                                                                "
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │Failed to connect to Azure DevOps API. Please check your credentials.     │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                Press 'q' to exit                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
