src/ui/snapshots/state/shared/error/multiline_error.snap
---
source: src/ui/state/shared/error.rs
expression: harness.backend()
---
"                                                                                "
"                                                                                "
"                                ❌ Error Occurred                               " Hidden by multi-width symbols: [(33, " ")]
"                                                                                "
"                                                                                "
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │Git operation failed:                                                     │  "
"  │Command: git cherry-pick abc123                                           │  "
"  │Exit code: 1                                                              │  "
"  │                                                                          │  "
"  │Error: CONFLICT (content): Merge conflict in src/main.rs                  │  "
"  │Please resolve conflicts and continue.                                    │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                 Press q to exit                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
