src/ui/snapshots/state/shared/error/special_characters.snap
---
source: src/ui/state/shared/error.rs
expression: harness.backend()
---
"                                                                                "
"                                                                                "
"                                ❌ Error Occurred                               " Hidden by multi-width symbols: [(33, " ")]
"                                                                                "
"                                                                                "
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │Parse error: Unexpected character '"' at position 42. Expected one of:    │  "
"  │['{', '[', 'true', 'false', 'null']. The JSON response from the API       │  "
"  │appears malformed. 🔧 Check API version compatibility.                    │  " Hidden by multi-width symbols: [(23, " ")]
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                 Press q to exit                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
