src/ui/snapshots/state/shared/error/with_long_message.snap
---
source: src/ui/state/shared/error.rs
expression: harness.backend()
---
"                                                                                "
"                                                                                "
"                                ❌ Error Occurred                               " Hidden by multi-width symbols: [(33, " ")]
"                                                                                "
"                                                                                "
"  ┌──────────────────────────────────────────────────────────────────────────┐  "
"  │Authentication failed: The Personal Access Token (PAT) provided is invalid│  "
"  │or has expired. Please verify that your PAT has the required permissions  │  "
"  │(Code: Read, Work Items: Read) and has not been revoked. You can generate │  "
"  │a new PAT from Azure DevOps user settings.                                │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  │                                                                          │  "
"  └──────────────────────────────────────────────────────────────────────────┘  "
"                                 Press q to exit                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
